--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>common</module>
         <module>fanxing</module>
         <module>kafka</module>
+        <module>performance</module>
     </modules>
 
 
@@ -30,6 +31,11 @@
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
         </dependency>
     </dependencies>
 
