--- a/ioandfile/pom.xml
+++ b/ioandfile/pom.xml
@@ -10,6 +10,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>ioandfile</artifactId>
+    <dependencies>
+        <!-- Apache POI核心库 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.2</version>
+        </dependency>
 
+        <!-- Apache POI用于读取XLSX文件的库 -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
